# plantarium

./: -- SQLite.sql  .gitattributes  .gitignore  Insomnia_2024-06-04.json  README.md  development_phases.md  documentation_gaps.md  index.html  package-lock.json  package.json  refactoring_plan.md  software_specification.md  tasks.md  tsconfig.json  turbo.json
.cursor/rules/: 01-project-overview.mdc  02-frontend-architecture.mdc  03-backend-architecture.mdc  04-api-integrations.mdc  05-data-model.mdc  06-development-workflow.mdc  07-implementation-priorities.mdc
.github/workflows/: ci_cd.yml  deploy-docs.yml  documentation.yml
apps/api/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.build.json
apps/documentation/: docusaurus.config.ts  package.json
apps/frontend/: package.json
backend/: package-lock.json  package.json  tsconfig.json
database/: plantarium.sqlite
docs/: development_phases.md  documentation_deployment.md  documentation_gaps.md  documentation_guidelines.md  documentation_tasks.md  docusaurus_setup.md  garden-notes.md
documentation/: README.md  cleanup.sh  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/: .gitignore  CHANGELOG.md  analysis_options.yaml  package-lock.json  pubspec.yaml
garden notes/: Primera collita de tomàquets.md  Segona collita de tomàquets.md  collita cebas.md  note 1.md  tomatos note.md
src/: App.svelte  app.controller.spec.ts  app.module.ts  main.ts  ormconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tasks/: electron-tasks.csv  tasks.md
(+240 files in other folders)
